--- a/webserver/templates/hello.html
+++ b/webserver/templates/hello.html
@@ -10,4 +10,5 @@
 
 <body>
     <p>Hello!</p>
+    <audio controls src="{{url_for('send_recording', path='example-recording.mp3')}}"></audio>
 </body>
