--- a/webserver/static/styles.css
+++ b/webserver/static/styles.css
@@ -1,3 +1,3 @@
 body {
-    color: blue;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
