--- a/webserver/templates/base.html
+++ b/webserver/templates/base.html
@@ -2,18 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %} {% endblock %} - ShowerScribe</title>
-    <link rel="stylesheet" href="../static/styles.css">
+    <title class="display4" >{% block title %} {% endblock %} - ShowerScribe</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">    
 </head>
 <body>
-    <nav>
-        <a href="{{ url_for('show_main') }}">Home</a>
-        <a href="{{ url_for('show_recordings') }}">Recordings</a>
-        <a href="{{ url_for('show_texts') }}">Texts</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('show_main') }}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('show_recordings') }}">Recordings</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('show_texts') }}">Texts</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
     <hr>
-    <div class="content">
+    <div class="custom-margin">
         {% block content %} {% endblock %}
     </div>
+
+    <!-- Include -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
 </body>
 </html>
