--- a/webserver/templates/recording.html
+++ b/webserver/templates/recording.html
@@ -1,15 +1,20 @@
 {% extends 'base.html' %}
 
+{% block title %}Recording {{ recording.id }}{% endblock %}
+
+
 {% block content %}
-    <h1 class="title">{% block title %} Recording {{recording.id}} {% endblock %}</h1>
-    <div class="content">
-        <div class="text">
-            <p><b>#{{ recording.id }}</b></p>
-            <p>{{ recording.recording_filename }}</p>
-            <p>Created at: {{ recording.created_at }}</p>
-            <audio controls>
-                <source src="{{ url_for('send_recording', path=recording.recording_filename)}}" type="audio/wav">
-            </audio>
+    <div class="custom-margin">
+        <h1 class="display-4">Recording {{ recording.id }}</h1>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">{{ recording.recording_filename }}</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Created at: {{ recording.created_at.strftime('%Y-%m-%d %H:%M:%S') }}</h6>
+                <audio controls class="mt-3">
+                    <source src="{{ url_for('send_recording', path=recording.recording_filename) }}" type="audio/wav">
+                </audio>
+            </div>
         </div>
     </div>
 {% endblock %}
+
