--- a/webserver/templates/text.html
+++ b/webserver/templates/text.html
@@ -1,14 +1,27 @@
 {% extends 'base.html' %}
 
+
+{% block title %}Text {{ text.id }}{% endblock %}
+
 {% block content %}
-    <h1 class="title">{% block title %} Text {{text.id}} {% endblock %}</h1>
-    <div class="content">
-        <div class="text">
-            <p><b>#{{ text.id }} (type {{ text.type}})</b></p>
-            <p>{{ text.text_filename }}</p>
-            <p>Created at: {{ text.created_at }}</p>
-            <p>Text:</p>
-            <p>{{ content }}</p>
+    <div class="custom-margin">
+        <h1 class="display-4">Text Details</h1>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">
+                    #{{ text.id }} (Type {{ text.type }})
+                </h5>
+                <h6 class="card-subtitle mb-2 text-muted">
+                    {{ text.text_filename }}
+                </h6>
+                <p class="card-text">
+                    Created at: {{ text.created_at.strftime('%Y-%m-%d %H:%M:%S') }}
+                </p>
+                <p class="card-text"><strong>Text Content:</strong></p>
+                <div class="card-text">
+                    <p>{{ content }}</p>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
