Database model update 1

--- a/webserver/templates/recording.html
+++ b/webserver/templates/recording.html
@@ -4,7 +4,7 @@
     <h1 class="title">{% block title %} Recording {{recording.id}} {% endblock %}</h1>
     <div class="content">
         <div class="text">
-            <p><b>#{{ recording.id }}</b></p>
+            <p><b>{{recording.display_name}} (#{{ recording.id }})</b></p>
             <p>{{ recording.recording_filename }}</p>
             <p>Created at: {{ recording.created_at }}</p>
             <audio controls>
