--- a/webserver/templates/recordings.html
+++ b/webserver/templates/recordings.html
@@ -5,7 +5,7 @@
     <div class="content">
         {% for recording in recordings %}
             <div class="recording">
-                <p><a href="{{ url_for('show_recording', recording_id=recording.id)}}"><b>#{{ recording.id }}</b></a></p>
+                <p><a href="{{ url_for('show_recording', recording_id=recording.id)}}"><b>{{recording.display_name}} (#{{ recording.id }})</b></a></p>
                 <p>{{ recording.recording_filename }}</p>
                 <p>Created at: {{ recording.created_at }}</p>
                 <audio controls>
