--- a/webserver/templates/texts.html
+++ b/webserver/templates/texts.html
@@ -5,7 +5,7 @@
     <div class="content">
         {% for text in texts %}
             <div class="text">
-                <p><a href="{{ url_for('show_text', text_id=text.id)}}"><b>#{{ text.id }} (type {{ text.type}})</b></a></p>
+                <p><a href="{{ url_for('show_text', text_id=text.id)}}"><b>{{text.display_name}} (#{{ text.id }} type {{ text.type}})</b></a></p>
                 <p>{{ text.text_filename }}</p>
                 <p>Created at: {{ text.created_at }}</p>
             </div>
