--- a/webserver/templates/text.html
+++ b/webserver/templates/text.html
@@ -1,27 +1,26 @@
 {% extends 'base.html' %}
 
-
-{% block title %}Text {{ text.id }}{% endblock %}
-
 {% block content %}
-    <div class="custom-margin">
-        <h1 class="display-4">Text Details</h1>
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">
-                    #{{ text.id }} (Type {{ text.type }})
-                </h5>
-                <h6 class="card-subtitle mb-2 text-muted">
-                    {{ text.text_filename }}
-                </h6>
-                <p class="card-text">
-                    Created at: {{ text.created_at.strftime('%Y-%m-%d %H:%M:%S') }}
-                </p>
-                <p class="card-text"><strong>Text Content:</strong></p>
-                <div class="card-text">
-                    <p>{{ content }}</p>
-                </div>
+<div style="display: flex; justify-content: space-between; align-items: center;">
+    <h1 class="display-4" style="color: #343f71;">Text Details</h1>
+    <a href="{{ url_for('show_recording', recording_id=text.associated_recording_id) }}" class="btn btn-secondary">Back to Recording #{{ text.id }}</a>
+</div>
+<p class="text-muted">Exploring Transcript #{{ text.id }}</p>
+
+<div class="card mb-4" style="border-color: #e9d8e4;">
+    <div class="card-body" style="background-color: white;">
+        <h3 class="card-title" style="color: #343f71;">
+            Transcript #{{ text.id }}
+        </h3>
+        <p class="card-text" style="color: #343f71;">
+            Created at: {{ text.created_at.strftime('%I:%M %p').lstrip('0') }}            
+        </p>
+        <p class="card-text" style="color: #343f71;"><strong>Text Content:</strong></p>
+        <div class="card-text">
+            <!-- Adjusting the pre tag to show the text in a large, non-scrolling box -->
+                <pre style="color: #343f71; padding: 15px; white-space: pre-wrap; word-break: keep-all; overflow-wrap: break-word; max-height: none;">{{ content }}</pre>
             </div>
         </div>
-    </div>
+            </div>
+
 {% endblock %}
