--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -2,14 +2,33 @@
 
 {% block content %}
 
-        <h1 class="display-4">{{ title }}</h1> 
-        
-        <!-- Bootstrap 'alert' component for important information -->
-        <div class="custom-box">
-            <p>ShowerScribe is a web application that allows you to record your shower thoughts and transcribe them into text.</p>
-            <p>It is built using Python and Flask.</p>
-            <p>Click on the links above to view your recordings and texts.</p>
-        </div>
-        
-        <h1 class="header-custom-color">Sessions</h1>
+
+  
+<div class="container mt-4">
+    <h1 class="display-4 text-center" style="color: #343f71;">Shower Scribe</h1>
+
+    <!-- Customized Alert Component -->
+    <div class="alert alert-secondary mt-3" style="border-left: 5px solid #343f71;">
+        <p>ShowerScribe is a web application that allows you to record your shower thoughts and transcribe them into text.</p>
+        <p>It is built using Python and Flask.</p>
+        <p>Click on the links above to view your recordings and texts.</p>
+    </div>
+
+    <h2 class="mt-4" style="color: #343f71;">Sessions</h2>
+
+    <div class="list-group" id="sessionList">
+        {% for date, recordings in grouped_recordings.items() %}
+        <a href="{{ url_for('recordings_on_date', date=date) }}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+            <span>{{ date }}</span>
+            <i class="bi bi-arrow-right-circle-fill" style="color: #343f71;"></i>
+        </a>
+        {% else %}
+            <p class="text-muted">No recordings found.</p>
+        {% endfor %}
+    </div>
+    
+</div>
+
+
+
 {% endblock %}
