--- a/webserver/templates/base.html
+++ b/webserver/templates/base.html
@@ -5,17 +5,13 @@
     <title class="display4" >{% block title %} {% endblock %} - ShowerScribe</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">    
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.9.1/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/css/bootstrap-icons.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='icons') }}">    
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="height: 70px;">
         <a style="font-size: 24px; display: flex; align-items: center;">
-            <i class="fas fa-shower" style="margin-right: 10px;"></i> 
-            <i class="fas fa-book" style="margin-right: 10px;"></i>
-            <i class="fas fa-feather-alt" style="margin-right: 10px;"></i>   
+            <object data="static/icons/shower.svg" width="25" height="25"> </object>
+            <object data="static/icons/book.svg" width="25" height="25"> </object>
+            <object data="static/icons/feather-pointed.svg" width="25" height="25"> </object>
         </a>
         
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,9 +25,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('show_search') }}">Search</a>
                 </li>
-            </ul>
-            <ul>
-                <li class="nav-item ml-auto">
+                <li>
                     <a class="nav-link" href="{{ url_for('show_settings') }}">Settings</a>
                 </li>
             </ul>
@@ -39,16 +33,15 @@
     </nav>
 
 
+
     <div class="custom-margin">
         {% block content %} {% endblock %}
     </div>
 
     <!-- Bootstrap JS and its dependencies -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="static/js/jquery-3.3.1.slim.min.js"></script>
+    <script src="static/js/bootstrap.min.js"></script>
+    <script src="static/js/jquery-3.5.1.min.js"></script>
 
 
 </body>
