--- a/webserver/templates/recordings.html
+++ b/webserver/templates/recordings.html
@@ -19,10 +19,10 @@
                         </a>
 
                     </h5>
-                    <!--<audio controls>
+                    <audio controls>
                         <source src="{{ url_for('send_recording', path=recording.recording_filename) }}" type="audio/wav">
                         Your browser does not support the audio element.
-                    </audio> -->
+                    </audio> 
                 </div>
             </div>
         {% else %}
