--- a/webserver/templates/date_recordings.html
+++ b/webserver/templates/date_recordings.html
@@ -1,31 +1,33 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <!-- Header -->
-    <div style="display: flex; justify-content: space-between; align-items: center;">
-        <h1 class="display-4" style="color: #343f71;">Recordings for {{ date.strftime('%b. %d, %Y') }}</h1>
-        <a href="{{ url_for('show_main') }}" class="btn btn-secondary">Back to Main Page</a>
-    </div>
-
-    {% for session in grouped_sessions %}
-        <!-- Session Title -->
-        <h2 style="color: #343f71;">{{ session[0].session_title }}</h2>
-
-        <!-- Session Recordings List -->
-        <div class="list-group mb-2">
-            {% for recording in session %}
-                <a href="{{ url_for('show_recording', recording_id=recording.id) }}" class="list-group-item list-group-item-action d-flex align-items-center recording-item" style="border-color: #e9d8e4;">
-                    <i class="bi bi-mic-fill mr-3" style="color: #343f71;"></i>
-                    <div>
-                        <h5 class="mb-1" style="color: #343f71;">Recording #{{ recording.id }}</h5>
-                        <small>Recorded at: {{ recording.created_at.strftime('%I:%M %p').lstrip('0') }}</small>
-                    </div>
-                </a>
-            {% endfor %}
+    <div class="container-sm">
+        <!-- Header -->
+        <div style="display: flex; justify-content: space-between; align-items: center;">
+            <h1 class="display-4" style="color: #343f71;">Recordings for {{ date.strftime('%b. %d, %Y') }}</h1>
+            <a href="{{ url_for('show_main') }}" class="btn btn-secondary">Back to Main Page</a>
         </div>
-    {% else %}
-        <p>No recordings found for this date.</p>
-    {% endfor %}
+
+        {% for session in grouped_sessions %}
+            <!-- Session Title -->
+            <h2 style="color: #343f71;">{{ session[0].session_title }}</h2>
+
+            <!-- Session Recordings List -->
+            <div class="list-group mb-2">
+                {% for recording in session %}
+                    <a href="{{ url_for('show_recording', recording_id=recording.id) }}" class="list-group-item list-group-item-action d-flex align-items-center recording-item" style="border-color: #e9d8e4;">
+                        <i class="bi bi-mic-fill mr-3" style="color: #343f71;"></i>
+                        <div>
+                            <h5 class="mb-1" style="color: #343f71;">{{ recording.display_name }}</h5>
+                            <small>Recorded at: {{ recording.created_at.strftime('%I:%M %p').lstrip('0') }}</small>
+                        </div>
+                    </a>
+                {% endfor %}
+            </div>
+        {% else %}
+            <p>No recordings found for this date.</p>
+        {% endfor %}
+    </div>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
@@ -48,7 +50,10 @@
             });
         });
     </script>
-{% endblock %}
+
+    {% endblock %}
+
+
 
 <style>
     .recording-item {
