--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -2,8 +2,6 @@
 
 {% block content %}
 
-
-  
 <div class="container mt-4">
     <h1 class="display-4 text-center" style="color: #343f71;">Shower Scribe</h1>
 
@@ -14,7 +12,7 @@
         <p>Click on the links above to view your recordings and texts.</p>
     </div>
 
-    <h2 class="mt-4" style="color: #343f71;">Sessions</h2>
+    <h2 class="mt-4" style="color: #343f71;">Recordings</h2>
 
     <div class="list-group" id="sessionList">
         {% for date, recordings in grouped_recordings.items() %}
