--- a/webserver/templates/recording.html
+++ b/webserver/templates/recording.html
@@ -2,20 +2,21 @@
 
 {% block content %}
 
-<div style="display: flex; justify-content: space-between; align-items: center;">
-    <h1 class="display-4" style="color: #343f71;">Recording Details</h1>
-    <div> 
-        <a href="{{ url_for('recordings_on_date', date=recording.created_at.strftime('%B %d, %Y')) }}" class="btn btn-secondary">Back to Recordings</a>
-        <button id="deleteBtn" class="btn btn-danger">Delete Recording</button>
+<div class="container-sm">
+    <div style="display: flex; justify-content: space-between; align-items: center;">
+        <h1 class="display-4" style="color: #343f71;">Recording Details</h1>
+        <div> 
+            <a href="{{ url_for('recordings_on_date', date=recording.created_at.strftime('%B %d, %Y')) }}" class="btn btn-secondary">Back to {{ recording.created_at.strftime('%b. %d, %Y')}} Recordings</a>
+            <button id="deleteBtn" class="btn btn-danger">Delete Recording</button>
+        </div>
     </div>
-</div>
 
     <p class="text-muted">Insight into Recording #{{ recording.id }}</p>
 
     <div class="card mb-4" style="border-color: #e9d8e4;">
         <div class="card-body" style="background-color: white;">
             <h3 class="card-title" style="color: #343f71;">{{ recording.display_name }}</h3>
-            <h6 class="card-subtitle mb-3" style="color: #343f71;">Recorded at: {{ recording.created_at.strftime('%I:%M %p').lstrip('0') }}</h6>
+            <h6 class="card-subtitle mb-3" style="color: #343f71;">Recorded at: {{ recording.created_at.strftime('%I:%M %p').lstrip('0')}}, {{ recording.created_at.strftime('%b. %d, %Y')}}</h6>
 
             <div class="audio-player mb-3">
                 <audio controls style="width: 100%; max-width: 300px;">
@@ -23,50 +24,53 @@
                     Your browser does not support the audio element.
                 </audio>
             </div>
+            
+            <div>
+            <h5 class="card-text" style="color: #343f71;"><strong>Resume:</strong></h5>
+                <!-- Adjusting the pre tag to show the text in a large, non-scrolling box -->
+                    <pre style="color: #343f71; padding: 15px; white-space: pre-wrap; word-break: keep-all; overflow-wrap: break-word; max-height: none;">{{ resume_text }}</pre>
+                </div>
+            
 
-            <a href="{{ url_for('show_text', text_id=recording.associated_transcription_id) }}" id="viewTranscriptBtn" class="btn" style="background-color: white; color: #343f71; border: 1px solid #343f71;">View Transcript</a>
+            <a href="{{ url_for('show_text', text_id=recording.associated_transcription_id) }}" id="viewTranscriptBtn" class="btn" style="background-color: white; color: #343f71; border: 1px solid #343f71;">View Complete Transcript</a>
         </div>
     </div>
+</div>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            // Button hover effect
-            var transcriptBtn = document.getElementById('viewTranscriptBtn');
-            transcriptBtn.addEventListener('mouseover', function () {
-                this.style.backgroundColor = '#343f71';
-                this.style.color = 'white';
-            });
-            transcriptBtn.addEventListener('mouseout', function () {
-                this.style.backgroundColor = 'white';
-                this.style.color = '#343f71';
-            });
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        // Button hover effect
+        var transcriptBtn = document.getElementById('viewTranscriptBtn');
+        transcriptBtn.addEventListener('mouseover', function () {
+            this.style.backgroundColor = '#343f71';
+            this.style.color = 'white';
         });
-    </script>
-
-    <!-- Footer with Back Button 
-    <footer class="mt-4" style="text-align: left;">
-        <a href="{{ url_for('recordings_on_date', date=recording.created_at.strftime('%B %d, %Y')) }}" class="btn btn-secondary">Back to Recordings</a>
-    </footer>-->
-
-    <script>
-        document.getElementById('deleteBtn').addEventListener('click', function() {
-            var confirmation = confirm('Are you sure you want to delete this recording?');
-            if (confirmation) {
-                // Perform an AJAX request to delete the recording
-                fetch('{{ url_for("delete_recording", recording_id=recording.id) }}', {
-                    method: 'POST'
-                }).then(response => {
-                    if (response.ok) {
-                        // Redirect to the recordings page for the date of the deleted recording
-                        window.location.href = "{{ url_for('recordings_on_date', date=recording.created_at.strftime('%B %d, %Y')) }}";
-                    } else {
-                        alert('Error: Unable to delete the recording.');
-                    }
-                });
-            }
+        transcriptBtn.addEventListener('mouseout', function () {
+            this.style.backgroundColor = 'white';
+            this.style.color = '#343f71';
         });
-    </script>
-    
+    });
+</script>
+
+<script>
+    document.getElementById('deleteBtn').addEventListener('click', function() {
+        var confirmation = confirm('Are you sure you want to delete this recording?');
+        if (confirmation) {
+            // Perform an AJAX request to delete the recording
+            fetch('{{ url_for("delete_recording", recording_id=recording.id) }}', {
+                method: 'POST'
+            }).then(response => {
+                if (response.ok) {
+                    // Redirect to the recordings page for the date of the deleted recording
+                    window.location.href = "{{ url_for('recordings_on_date', date=recording.created_at.strftime('%B %d, %Y')) }}";
+                } else {
+                    alert('Error: Unable to delete the recording.');
+                }
+            });
+        }
+    });
+</script>
 
 
 {% endblock %}
