--- a/webserver/templates/settings.html
+++ b/webserver/templates/settings.html
@@ -8,25 +8,25 @@
             <a href="{{ url_for('show_main') }}" class="btn btn-secondary">Back to Main Page</a>
         </div>
 
-        <div class="card my-4" style="border-color: #e9d8e4;">
-            <div class="card-body" style="background-color: white;">
-                <h2 class="card-title" style="color: #343f71;">Privacy</h2>
-                <!-- Privacy settings content -->
+        <!-- A form to update the settings --> 
+        <form method="post" action="{{ url_for('save_settings') }}">
+            <div class="form-group">
+                <label for="grouping_minutes">Number of Minutes for Grouping:</label>
+                <input type="number" class="form-control" id="grouping_minutes" name="grouping_minutes" required>
             </div>
-        </div>
 
-        <div class="card my-4" style="border-color: #e9d8e4;">
-            <div class="card-body" style="background-color: white;">
-                <h2 class="card-title" style="color: #343f71;">Display</h2>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="transcription_switch" name="transcription_switch">
+                <label class="form-check-label" for="transcription_switch">Enable Transcription (sends your reecordings for transcription to AssemblyAI)</label>
             </div>
-        </div>
 
-        <div class="card my-4" style="border-color: #e9d8e4;">
-            <div class="card-body" style="background-color: white;">
-                <h2 class="card-title" style="color: #343f71;">Storage</h2>
-                <!-- Storage settings content -->
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="llm_switch_1" name="llm_switch_1">
+                <label class="form-check-label" for="llm_switch_1">Enable LLM Resume Service (sends some data to Cohere)</label>
             </div>
-        </div>
+
+            <button type="submit" class="btn btn-primary">Save Settings</button>
+        </form>
     </div>
     
 {% endblock %}
