changed search to go in index

--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -17,7 +17,7 @@
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" placeholder="Search..." name="query" required>
                     <div class="input-group-append">
-                        <button class="btn btn-outline-secondary" type="submit">Search</button>
+                        <button class="btn btn-outline-secondary" type="submit">Go</button>
                     </div>
                 </div>
             </form>
