--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -13,10 +13,14 @@
         <p>Click on the links above to view your recordings and texts.</p>
 
         <!-- Add the search form -->
-        <form action="{{ url_for('show_search') }}" method="post">
-            <label for="query">Search:</label>
-            <input type="text" name="query" id="query" required>
-            <button type="submit">Search</button>
+        <form action="{{ url_for('search_results') }}" method="get">
+            <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="Search..." name="query">
+                <input type="number" class="form-control" placeholder="Results" name="n" min="3" max="50" step="1" value="10" required>
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="submit">Go</button>
+                </div>
+            </div>
         </form>
     </div>
 
