--- a/webserver/templates/base.html
+++ b/webserver/templates/base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='icons') }}">    
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="height: 70px;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4" style="height: 70px;">
         <div class="container-sm">
             <a style="font-size: 24px; display: flex; align-items: center;">
                 <object data="{{ url_for('static', filename='icons/shower.svg') }}" width="25" height="25"></object>
@@ -17,12 +17,12 @@
             </a>
             
             
-            <div class="container-fluid dropdown" style="z-index:10;position:relative;display:inline-block;padding-top:10px">
+            <div class="container-fluid dropdown" style="padding-top: 1rem">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav" style="float:right;position:absolute;width:100%;">
-                    <ul class="navbar-nav ml-auto dropdown-menu" style="padding-left:10px">
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto dropdown-menu" style="padding-left: 1rem">
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('show_main') }}">Home</a>
                         </li>
